--- a/templates/planner/studyplanner.html
+++ b/templates/planner/studyplanner.html
@@ -20,7 +20,7 @@
 					
 				</div>
 			</form>
-			{% if minutes %}
+			{% if minutes or hours %}
 			<p style="font-size:24px;color:#dcdde1">You should study <b>{{ hours }} hours {{ minutes }} minutes</b> everyday if you start today.
 				{% endif %}
 			</div>
