--- a/templates/planner/studyplanner.html
+++ b/templates/planner/studyplanner.html
@@ -1,28 +1,47 @@
 {% extends 'planner/base.html' %}
 {% block body %}
-		<div class="row">
-			<h1>Daily Study Hours</h1>
-			<h3 style="color:#808e9b">Fill in the details and figure out <br> how many hours you need to study everyday.</h3><br>
-			<form action="/" method="POST" id="myForm">
-				{% csrf_token %}
-				<div class="form-group">
-					<label>I have <input type="text" name="days" id="days"> days left until the exam.</label>
-					<br>
-					
-					<label>I have <input id="msgs" type="text" name="subjects"> no. of subjects to study.</label>
-					<br><br>
-					<div id='data-table'>
-						
-					</div>
-						<div id="submit-btn">
-						</div>
-					
+	<div class="row">
+		<h1>Daily Study Hours</h1>
+		<h3 style="color:#808e9b">Fill in the details and figure out <br> how many hours you need to study everyday.</h3><br>
+		<form action="/" method="POST" id="myForm">
+			{% csrf_token %}
+			<div class="form-group">
+				<label>I have <input type="text" name="days" id="days" value="{{ days }}"> days left until the exam.</label>
+				<br>
+				
+				<label>I have <input id="msgs" type="text" name="subjects" value="{{ subjects }}"> no. of subjects to study.</label>
+				
+				<br><br>
+				<div id='data-table'>
 					
 				</div>
-			</form>
-			{% if minutes or hours %}
-			<p style="font-size:24px;color:#dcdde1">You should study <b>{{ hours }} hours {{ minutes }} minutes</b> everyday if you start today.
-				{% endif %}
+				<div id="submit-btn">
+				</div>
+				
+				
 			</div>
+		</form>
+		<div class="row">
+			{% if minutes or hours %}
+			<p style="font-size:24px;color:#dcdde1">You should study <b>{{ hours }} hours {{ minutes }} minutes</b> everyday if you start today. <br>
+			Here's how many hours you need to study for everyday you waste <i class="em em-point_down"></i>.
+			{% endif %}
+			<div class="col-md-2">	
+			</div>
+
+		{% if chart %}	
+			<div class="col-md-8" style="padding:30px; background:#fff; opacity:0.5; border-radius:5px;">	
+		{{chart.as_html}}
+			</div>
+			{% endif %}
+
+			<div class="col-md-2"> </div>
 		</div>
-	{% endblock %}
+		
+		
+		
+		</div>
+		
+	</div>
+	
+{% endblock %}
