--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,11 @@
 body {
 	font-family: 'Nunito', sans-serif;
+	background: #764ba2; /* fallback for old browsers */
+	background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+	background: -webkit-linear-gradient(to right, #667eea, #764ba2); 
+	background-attachment: fixed;
 }
+
 
 h1 {
 	color: #ffffff;
@@ -30,4 +35,8 @@ input:focus, input:active {
 	background: none;
 	border-bottom: 1px solid #ffffff;
 	outline: none;
+}
+
+input::placeholder, input::-webkit-input-placeholder {
+	color: #AAA;
 }
