--- a/templates/planner/base.html
+++ b/templates/planner/base.html
@@ -8,7 +8,7 @@
 		<title>StudyPlanner</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}?v1">
 		<link rel='shortcut icon' type='image/x-icon' href="{% static "images/favicon.png" %}" >
 		<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -21,7 +21,7 @@
 		gtag('config', 'UA-118291853-1');
 		</script>
 	</head>
-	<body style="background-attachment: fixed; background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+	<body class="background">
 		
 		<div class="container" style="text-align:center; margin-top: 50px;">
 			<div style="text-align: center;">
@@ -31,7 +31,7 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8 container">
 					<h1>Daily Study Hours</h1>
-					<h3 style="color:#130f40">Fill in the details and figure out <br> how many hours you need to study everyday.</h3><br>
+					<h3 style="color:#f1f2f6">Fill in the details and figure out <br> how many hours you need to study everyday.</h3><br>
 					<form action="/" method="POST" id="myForm">
 						{% csrf_token %}
 						<div class="form-group">
