--- a/templates/planner/base.html
+++ b/templates/planner/base.html
@@ -47,7 +47,7 @@
 						<p style="font-size:24px;color:#f5f6fa">You should study <b>{{ hours }} hours {{ minutes }} minutes</b> everyday if you start today. <br> Here's how many hours you need to study for everyday you waste <i class="em em-point_down"></i></p>
 					{% endif %}
 					{% if chart %}
-						<div id="chart" style="display: inline;">
+						<div id="chart" style="display: inline-block;">
 							
 							<embed type="image/svg+xml" src="{{chart|safe}}"/>
 						</div>
