--- a/templates/planner/base.html
+++ b/templates/planner/base.html
@@ -8,7 +8,7 @@
 		<title>StudyPlanner</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}?v1">
+		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 		<link rel='shortcut icon' type='image/x-icon' href="{% static "images/favicon.png" %}" >
 		<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
